# xmacro-performance

cpp/: build.sh  main.cpp
rust/: Cargo.toml
rust/benches/: my_benchmark.rs
rust/src/: lib.rs
