[package]
name = "rust"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
rand = "0.8.3"

[[bench]]
name = "my_benchmark"
harness = false
